--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,28 @@
 colorama==0.4.4
     # via -r requirements.in
 numpy==1.21.5
+    # via
+    #   -r requirements.in
+    #   opencv-python
+    #   pandas
+    #   torchvision
+opencv-python==4.5.4.60
     # via -r requirements.in
+pandas==1.3.5
+    # via -r requirements.in
+pillow==8.4.0
+    # via torchvision
+python-dateutil==2.8.2
+    # via pandas
+pytz==2021.3
+    # via pandas
+six==1.16.0
+    # via python-dateutil
+torch==1.10.1
+    # via
+    #   -r requirements.in
+    #   torchvision
+torchvision==0.11.2
+    # via -r requirements.in
+typing-extensions==4.0.1
+    # via torch
