--- a/requirements.in
+++ b/requirements.in
@@ -7,4 +7,10 @@ torchvision==0.11.2
 beartype
 tqdm
 pandas
-PIL
+Pillow
+scipy
+torch-scatter -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
+torch-sparse -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
+torch-cluster -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
+torch-spline-conv -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
+torch-geometric -f https://data.pyg.org/whl/torch-1.10.0+cpu.html
