--- a/requirements.txt
+++ b/requirements.txt
@@ -4,33 +4,96 @@
 #
 #    pip-compile
 #
-beartype==0.9.1
+beartype==0.10.2
     # via -r requirements.in
+certifi==2021.10.8
+    # via requests
+charset-normalizer==2.0.12
+    # via requests
 colorama==0.4.4
     # via -r requirements.in
-numpy==1.21.5
+googledrivedownloader==0.4
+    # via torch-geometric
+idna==3.3
+    # via requests
+isodate==0.6.1
+    # via rdflib
+jinja2==3.0.3
+    # via torch-geometric
+joblib==1.1.0
+    # via scikit-learn
+markupsafe==2.1.0
+    # via jinja2
+networkx==2.7
+    # via torch-geometric
+numpy==1.22.2
     # via
     #   -r requirements.in
     #   opencv-python
     #   pandas
+    #   scikit-learn
+    #   scipy
+    #   torch-geometric
     #   torchvision
-opencv-python==4.5.4.60
+opencv-python==4.5.5.62
     # via -r requirements.in
-pandas==1.3.5
-    # via -r requirements.in
-pillow==8.4.0
-    # via torchvision
+pandas==1.4.1
+    # via
+    #   -r requirements.in
+    #   torch-geometric
+pillow==9.0.1
+    # via
+    #   -r requirements.in
+    #   torchvision
+pyparsing==3.0.7
+    # via
+    #   rdflib
+    #   torch-geometric
 python-dateutil==2.8.2
     # via pandas
 pytz==2021.3
     # via pandas
+pyyaml==6.0
+    # via
+    #   torch-geometric
+    #   yacs
+rdflib==6.1.1
+    # via torch-geometric
+requests==2.27.1
+    # via torch-geometric
+scikit-learn==1.0.2
+    # via torch-geometric
+scipy==1.8.0
+    # via
+    #   -r requirements.in
+    #   scikit-learn
+    #   torch-geometric
+    #   torch-sparse
 six==1.16.0
     # via python-dateutil
+threadpoolctl==3.1.0
+    # via scikit-learn
 torch==1.10.1
     # via
     #   -r requirements.in
     #   torchvision
+torch-cluster==1.5.9
+torch-geometric==2.0.3
+torch-scatter==2.0.9
+torch-sparse==0.6.12
+torch-spline-conv==1.2.1
 torchvision==0.11.2
     # via -r requirements.in
-typing-extensions==4.0.1
+tqdm==4.63.0
+    # via
+    #   -r requirements.in
+    #   torch-geometric
+typing-extensions==4.1.1
     # via torch
+urllib3==1.26.8
+    # via requests
+yacs==0.1.8
+    # via torch-geometric
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
