--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,14 @@
 numpy
 colorama >= 0.4.0
-opencv-python
+opencv-python==4.7.0.72
 pandas
-torch==1.10.1 
+torch==1.10.1
 torchvision==0.11.2
 beartype
 tqdm
 pandas
 Pillow
 scipy
+matplotlib==3.7.5
+scikit-image==0.21.0
+imagecodecs
